--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 button {
-    background-color: #64A712;
+    background-color: #8cff00;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
 }
